--- a/index.html
+++ b/index.html
@@ -9,18 +9,14 @@
 </head>
 <body>
     <div class="container">
-        <h1>Net Salary Calculator</span></h1>
-        <input type="number" placeholder="Enter your gross salary">
+        <h1>Net Salary Calculator</h1>
+
+        <input type="number" placeholder="Enter your gross salary" id="salary">
 
         <button type="submit" onclick="netSalary()" id="btn" class="btn btn-primary">Calculate</button>
 
-
-
-
-
+        <p id="net"></p>
     </div>
-    
-
 
     <script src="index.js"></script>
 </body>
