--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
 </head>
 <body>
     <div class="container">
-        <h1>Net Salary Calculator</h1>
+        <h2>Net Salary Calculator</h2>
 
         <input type="number" placeholder="Enter your gross salary" id="salary">
 
         <button type="submit" onclick="netSalary()" id="btn" class="btn btn-primary">Calculate</button>
+
+        <h3>Net Salary:</h3>
 
         <p id="net"></p>
     </div>
