--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
     <div class="container">
         <h2>Net Salary Calculator</h2>
 
+        <!-- input form where to user will input the salary  -->
+
         <input type="number" placeholder="Enter your gross salary" id="salary">
 
+<!-- Submit button  -->
         <button type="submit" onclick="netSalary()" id="btn" class="btn btn-primary">Calculate</button>
 
         <h3>Net Salary:</h3>
